{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 19,
  "lineage": "f36786e1-71d3-fa4f-d9fd-db0b6fd7cda2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lead_gen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0102a36b3e9d5e4df",
            "arn": "arn:aws:ec2:us-east-1:222254929302:instance/i-032c7c7041735711b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-032c7c7041735711b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "lead-gen-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb8b4ba925eb478f",
            "private_dns": "ip-10-0-1-179.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.179",
            "public_dns": "ec2-3-219-168-141.compute-1.amazonaws.com",
            "public_ip": "3.219.168.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:222254929302:key/a481d773-c7be-4afe-be0d-34eae98b0ce1",
                "tags_all": {
                  "Ambiente": "prod",
                  "CustoAlvo": "aws-academy-30usd",
                  "Gerenciado": "terraform",
                  "Projeto": "lead-gen-motor",
                  "Proprietario": "demarchi-mei"
                },
                "throughput": 125,
                "volume_id": "vol-0245114638fd0fd46",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081be44d2ba3645a3",
            "tags": {
              "Name": "lead-gen-motor",
              "Projeto": "lead-gen-motor"
            },
            "tags_all": {
              "Ambiente": "prod",
              "CustoAlvo": "aws-academy-30usd",
              "Gerenciado": "terraform",
              "Name": "lead-gen-motor",
              "Projeto": "lead-gen-motor",
              "Proprietario": "demarchi-mei"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09b72e4856053ef45"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.lead_gen",
            "aws_security_group.lead_gen",
            "aws_subnet.publica",
            "aws_vpc.principal",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:222254929302:internet-gateway/igw-063953c1bc9f57385",
            "id": "igw-063953c1bc9f57385",
            "owner_id": "222254929302",
            "tags": {
              "Name": "lead-gen-igw"
            },
            "tags_all": {
              "Ambiente": "prod",
              "CustoAlvo": "aws-academy-30usd",
              "Gerenciado": "terraform",
              "Name": "lead-gen-igw",
              "Projeto": "lead-gen-motor",
              "Proprietario": "demarchi-mei"
            },
            "vpc_id": "vpc-03db1279e3faefe81"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:222254929302:route-table/rtb-070be662e5b68951c",
            "id": "rtb-070be662e5b68951c",
            "owner_id": "222254929302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-063953c1bc9f57385",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lead-gen-rt-publica"
            },
            "tags_all": {
              "Ambiente": "prod",
              "CustoAlvo": "aws-academy-30usd",
              "Gerenciado": "terraform",
              "Name": "lead-gen-rt-publica",
              "Projeto": "lead-gen-motor",
              "Proprietario": "demarchi-mei"
            },
            "timeouts": null,
            "vpc_id": "vpc-03db1279e3faefe81"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aad874228fdd5f6b",
            "route_table_id": "rtb-070be662e5b68951c",
            "subnet_id": "subnet-081be44d2ba3645a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publica",
            "aws_subnet.publica",
            "aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lead_gen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:222254929302:security-group/sg-09b72e4856053ef45",
            "description": "Lead Gen Motor - acesso minimo necessario",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SMTP SES - envio de email",
                "from_port": 587,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 587
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Saida HTTP - atualizacoes, yum",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Saida HTTPS - APIs externas",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL interno Docker",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-09b72e4856053ef45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "API Go - porta da aplicacao",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH - somente IP autorizado",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lead-gen-sg",
            "name_prefix": "",
            "owner_id": "222254929302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lead-gen-sg"
            },
            "tags_all": {
              "Ambiente": "prod",
              "CustoAlvo": "aws-academy-30usd",
              "Gerenciado": "terraform",
              "Name": "lead-gen-sg",
              "Projeto": "lead-gen-motor",
              "Proprietario": "demarchi-mei"
            },
            "timeouts": null,
            "vpc_id": "vpc-03db1279e3faefe81"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:222254929302:subnet/subnet-081be44d2ba3645a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081be44d2ba3645a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "222254929302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lead-gen-subnet-publica"
            },
            "tags_all": {
              "Ambiente": "prod",
              "CustoAlvo": "aws-academy-30usd",
              "Gerenciado": "terraform",
              "Name": "lead-gen-subnet-publica",
              "Projeto": "lead-gen-motor",
              "Proprietario": "demarchi-mei"
            },
            "vpc_id": "vpc-03db1279e3faefe81"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:222254929302:vpc/vpc-03db1279e3faefe81",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04fdd86cdb6fb781f",
            "default_route_table_id": "rtb-0aa4ce847b6e4de28",
            "default_security_group_id": "sg-03c1eb996b38e1eb5",
            "dhcp_options_id": "dopt-031115acd391f5fb9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03db1279e3faefe81",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa4ce847b6e4de28",
            "owner_id": "222254929302",
            "tags": {
              "Name": "lead-gen-vpc"
            },
            "tags_all": {
              "Ambiente": "prod",
              "CustoAlvo": "aws-academy-30usd",
              "Gerenciado": "terraform",
              "Name": "lead-gen-vpc",
              "Projeto": "lead-gen-motor",
              "Proprietario": "demarchi-mei"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}